--- a/src/components/Comments/Comments.css
+++ b/src/components/Comments/Comments.css
@@ -7,6 +7,7 @@
     @apply fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white p-4 border border-gray-300 shadow-lg; 
     width: 70%;
     height: inherit;
+    border-radius: 3%;
 }
 
 .show-comment {
